feat: 套用數個異動
1. 更新第三方函式庫。
2. 更新預設的使用者代理字串。

--- a/App.config
+++ b/App.config
@@ -11,7 +11,7 @@
                 <value>False</value>
             </setting>
             <setting name="UserAgent" serializeAs="String">
-                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/107.0.0.0 Safari/537.36</value>
+                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.70</value>
             </setting>
             <setting name="BrowserItemIndex" serializeAs="String">
                 <value>0</value>
