feat: 套用數個異動
1. 更新 README.md。
2. 加入更新應用程式設定值的功能。
3. 更新預設的使用者代理字串。
4. 程式碼調整。
5. 更新第三方函示庫。
6. 更新版本號。
7. 擴充 "載入 Cookies" 功能支援的網頁瀏覽器。(未測試)
8. 針對搜尋功能，加入搜尋類型欄位。

--- a/App.config
+++ b/App.config
@@ -11,10 +11,10 @@
                 <value>False</value>
             </setting>
             <setting name="UserAgent" serializeAs="String">
-                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.70</value>
+                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/110.0.0.0 Safari/537.36 Edg/110.0.1587.57</value>
             </setting>
             <setting name="BrowserItemIndex" serializeAs="String">
-                <value>0</value>
+                <value>1</value>
             </setting>
             <setting name="ProfileFolderName" serializeAs="String">
                 <value />
@@ -29,6 +29,9 @@
                 <value>False</value>
             </setting>
             <setting name="IsStreaming" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="UpdateSettings" serializeAs="String">
                 <value>True</value>
             </setting>
         </YTLiveChatCatcher.Properties.Settings>
