feat: 套用數個異動
1. 更新第三方函式庫。
2. 將處理 YT API 的程式碼變更命名空間。
3. 加入 Client Hints 的處裡。
4. 更新預設的使用者代理字串。

--- a/App.config
+++ b/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="YTLiveChatCatcher.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="YTLiveChatCatcher.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <userSettings>
         <YTLiveChatCatcher.Properties.Settings>
@@ -11,7 +14,7 @@
                 <value>False</value>
             </setting>
             <setting name="UserAgent" serializeAs="String">
-                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/110.0.0.0 Safari/537.36 Edg/110.0.1587.57</value>
+                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36</value>
             </setting>
             <setting name="BrowserItemIndex" serializeAs="String">
                 <value>1</value>
@@ -36,4 +39,29 @@
             </setting>
         </YTLiveChatCatcher.Properties.Settings>
     </userSettings>
+    <applicationSettings>
+        <YTLiveChatCatcher.Properties.Settings>
+            <setting name="SecChUa" serializeAs="String">
+                <value>"Google Chrome";v="111", "Not A(Brand";v="8", "Chromium";v="111"</value>
+            </setting>
+            <setting name="SecChUaMobile" serializeAs="String">
+                <value>?0</value>
+            </setting>
+            <setting name="SecChUaPlatform" serializeAs="String">
+                <value>Windows</value>
+            </setting>
+            <setting name="SecFetchDest" serializeAs="String">
+                <value>empty</value>
+            </setting>
+            <setting name="SecFetchMode" serializeAs="String">
+                <value>same-origin</value>
+            </setting>
+            <setting name="SecFetchSite" serializeAs="String">
+                <value>same-origin</value>
+            </setting>
+            <setting name="SecFetchUser" serializeAs="String">
+                <value>?1</value>
+            </setting>
+        </YTLiveChatCatcher.Properties.Settings>
+    </applicationSettings>
 </configuration>
