--- a/App.config
+++ b/App.config
@@ -14,7 +14,7 @@
                 <value>False</value>
             </setting>
             <setting name="UserAgent" serializeAs="String">
-                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36</value>
+                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36</value>
             </setting>
             <setting name="BrowserItemIndex" serializeAs="String">
                 <value>1</value>
@@ -42,7 +42,7 @@
     <applicationSettings>
         <YTLiveChatCatcher.Properties.Settings>
             <setting name="SecChUa" serializeAs="String">
-                <value>"Google Chrome";v="111", "Not A(Brand";v="8", "Chromium";v="111"</value>
+                <value>"Chromium";v="112", "Google Chrome";v="112", "Not:A-Brand";v="99"</value>
             </setting>
             <setting name="SecChUaMobile" serializeAs="String">
                 <value>?0</value>
