feat: 更新第三方函式庫
1. 更新預設的使用者代理字串。
2. 更新第三方函式庫。

--- a/App.config
+++ b/App.config
@@ -14,7 +14,7 @@
                 <value>False</value>
             </setting>
             <setting name="UserAgent" serializeAs="String">
-                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36</value>
+                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/115.0.0.0 Safari/537.36</value>
             </setting>
             <setting name="BrowserItemIndex" serializeAs="String">
                 <value>3</value>
@@ -42,7 +42,7 @@
     <applicationSettings>
         <YTLiveChatCatcher.Properties.Settings>
             <setting name="SecChUa" serializeAs="String">
-                <value>"Not.A/Brand";v="8", "Chromium";v="114", "Google Chrome";v="114"</value>
+                <value>"Not/A)Brand";v="99", "Google Chrome";v="115", "Chromium";v="115"</value>
             </setting>
             <setting name="SecChUaMobile" serializeAs="String">
                 <value>?0</value>
