--- a/YTLiveChatCatcher.csproj
+++ b/YTLiveChatCatcher.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
@@ -7,7 +7,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UseWindowsForms>true</UseWindowsForms>
 		<RootNamespace>YTLiveChatCatcher</RootNamespace>
-		<Version>1.4.10</Version>
+		<Version>1.4.11</Version>
 		<AssemblyName>YTLiveChatCatcher</AssemblyName>
 		<ApplicationIcon>Resources\app_icon_large.ico</ApplicationIcon>
 		<DebugType>embedded</DebugType>
@@ -19,13 +19,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="AngleSharp" Version="1.0.4" />
-		<PackageReference Include="EPPlus" Version="6.2.6" />
-		<PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.9" />
+		<PackageReference Include="EPPlus" Version="6.2.7" />
+		<PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.10" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.4" />
-		<PackageReference Include="NLog" Version="5.2.2" />
-		<PackageReference Include="NLog.Extensions.Logging" Version="5.3.2" />
+		<PackageReference Include="NLog" Version="5.2.3" />
+		<PackageReference Include="NLog.Extensions.Logging" Version="5.3.3" />
 		<PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
 	</ItemGroup>
 
