feat: 套用數個異動
1. 更新第三方函式庫。
2. 更新預設的使用者代理字串。（Google Chrome v118）
3. 新增 Sec-CH-UA 的可編輯欄位。
4. UI 排版調整。

--- a/App.config
+++ b/App.config
@@ -14,7 +14,7 @@
                 <value>False</value>
             </setting>
             <setting name="UserAgent" serializeAs="String">
-                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/116.0.0.0 Safari/537.36</value>
+                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/118.0.0.0 Safari/537.36</value>
             </setting>
             <setting name="BrowserItemIndex" serializeAs="String">
                 <value>3</value>
@@ -37,13 +37,13 @@
             <setting name="UpdateSettings" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="SecChUa" serializeAs="String">
+                <value>"Chromium";v="118", "Google Chrome";v="118", "Not=A?Brand";v="99"</value>
+            </setting>
         </YTLiveChatCatcher.Properties.Settings>
     </userSettings>
     <applicationSettings>
         <YTLiveChatCatcher.Properties.Settings>
-            <setting name="SecChUa" serializeAs="String">
-                <value>"Chromium";v="116", "Not)A;Brand";v="24", "Google Chrome";v="116"</value>
-            </setting>
             <setting name="SecChUaMobile" serializeAs="String">
                 <value>?0</value>
             </setting>
