--- a/App.config
+++ b/App.config
@@ -14,7 +14,7 @@
                 <value>False</value>
             </setting>
             <setting name="UserAgent" serializeAs="String">
-                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/118.0.0.0 Safari/537.36</value>
+                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Safari/537.36</value>
             </setting>
             <setting name="BrowserItemIndex" serializeAs="String">
                 <value>3</value>
@@ -38,7 +38,7 @@
                 <value>True</value>
             </setting>
             <setting name="SecChUa" serializeAs="String">
-                <value>"Chromium";v="118", "Google Chrome";v="118", "Not=A?Brand";v="99"</value>
+                <value>"Google Chrome";v="119", "Chromium";v="119", "Not?A_Brand";v="24"</value>
             </setting>
         </YTLiveChatCatcher.Properties.Settings>
     </userSettings>
