fix: 修正在搜尋視窗匯出 *.xlsx 檔案時會造成主視窗控制項停用、啟用狀態異常的問題
1. 修正在搜尋視窗匯出 *.xlsx 檔案時會造成主視窗控制項停用、啟用狀態異常的問題。
2. 更新應用程式的作者、公司等資訊。

--- a/YTLiveChatCatcher.csproj
+++ b/YTLiveChatCatcher.csproj
@@ -7,10 +7,12 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UseWindowsForms>true</UseWindowsForms>
 		<RootNamespace>YTLiveChatCatcher</RootNamespace>
-		<Version>1.5.0</Version>
+		<Version>1.5.1</Version>
 		<AssemblyName>YTLiveChatCatcher</AssemblyName>
 		<ApplicationIcon>Resources\app_icon_large.ico</ApplicationIcon>
 		<DebugType>embedded</DebugType>
+		<Authors>perditavojo</Authors>
+		<Company>DD們的避難所</Company>
 	</PropertyGroup>
 
 	<ItemGroup>
