--- a/YTLiveChatCatcher/App.config
+++ b/YTLiveChatCatcher/App.config
@@ -22,7 +22,7 @@
             <setting name="ProfileFolderName" serializeAs="String">
                 <value />
             </setting>
-            <setting name="LoadCookies" serializeAs="String">
+            <setting name="LoadCookie" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="EnableDebug" serializeAs="String">
@@ -30,9 +30,6 @@
             </setting>
             <setting name="ExportAuthorPhoto" serializeAs="String">
                 <value>False</value>
-            </setting>
-            <setting name="IsStreaming" serializeAs="String">
-                <value>True</value>
             </setting>
             <setting name="UpdateSettings" serializeAs="String">
                 <value>True</value>
