chore: 調整 *.csproj 的設定
調整 *.csproj 的設定。

--- a/YTJsonParser/YTJsonParser.csproj
+++ b/YTJsonParser/YTJsonParser.csproj
@@ -30,4 +30,10 @@
     <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
