--- a/YTLiveChatCatcher/App.config
+++ b/YTLiveChatCatcher/App.config
@@ -14,7 +14,7 @@
                 <value>False</value>
             </setting>
             <setting name="UserAgent" serializeAs="String">
-                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36</value>
+                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36</value>
             </setting>
             <setting name="BrowserItemIndex" serializeAs="String">
                 <value>3</value>
@@ -35,7 +35,7 @@
                 <value>True</value>
             </setting>
             <setting name="SecChUa" serializeAs="String">
-                <value>"Not_A Brand";v="8", "Chromium";v="120", "Google Chrome";v="120"</value>
+                <value>"Google Chrome";v="123", "Not:A-Brand";v="8", "Chromium";v="123"</value>
             </setting>
         </YTLiveChatCatcher.Properties.Settings>
     </userSettings>
