--- a/YTLiveChatCatcher/Properties/Settings.settings
+++ b/YTLiveChatCatcher/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="UserAgent" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36</Value>
+      <Value Profile="(Default)">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36</Value>
     </Setting>
     <Setting Name="BrowserItemIndex" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">3</Value>
@@ -27,7 +27,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="SecChUa" Type="System.String" Scope="User">
-      <Value Profile="(Default)">"Not_A Brand";v="8", "Chromium";v="120", "Google Chrome";v="120"</Value>
+      <Value Profile="(Default)">"Google Chrome";v="123", "Not:A-Brand";v="8", "Chromium";v="123"</Value>
     </Setting>
     <Setting Name="SecChUaMobile" Type="System.String" Scope="Application">
       <Value Profile="(Default)">?0</Value>
