chore: 更新第三方函式庫
1. 更新第三方函式庫。
2. 更新預設的使用者代理字串。

--- a/YTLiveChatCatcher/App.config
+++ b/YTLiveChatCatcher/App.config
@@ -14,7 +14,7 @@
                 <value>False</value>
             </setting>
             <setting name="UserAgent" serializeAs="String">
-                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/125.0.0.0 Safari/537.36</value>
+                <value>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/128.0.0.0 Safari/537.36</value>
             </setting>
             <setting name="BrowserItemIndex" serializeAs="String">
                 <value>3</value>
@@ -35,7 +35,7 @@
                 <value>True</value>
             </setting>
             <setting name="SecChUa" serializeAs="String">
-                <value>"Google Chrome";v="125", "Chromium";v="125", "Not.A/Brand";v="24"</value>
+                <value>"Chromium";v="128", "Not;A=Brand";v="24", "Google Chrome";v="128"</value>
             </setting>
         </YTLiveChatCatcher.Properties.Settings>
     </userSettings>
