--- a/YTLiveChatCatcher/YTLiveChatCatcher.csproj
+++ b/YTLiveChatCatcher/YTLiveChatCatcher.csproj
@@ -2,17 +2,17 @@
 
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
-		<TargetFramework>net8.0-windows7.0</TargetFramework>
+		<TargetFramework>net9.0-windows7.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UseWindowsForms>true</UseWindowsForms>
 		<RootNamespace>YTLiveChatCatcher</RootNamespace>
-		<Version>2.0.3</Version>
+		<Version>2.0.4</Version>
 		<AssemblyName>YTLiveChatCatcher</AssemblyName>
 		<ApplicationIcon>Resources\app_icon_large.ico</ApplicationIcon>
 		<DebugType>embedded</DebugType>
 		<Authors>perditavojo</Authors>
-		<Company>DD們的避難所</Company>
+		<Company>垃圾桶</Company>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -26,11 +26,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="EPPlus" Version="7.6.1" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.2" />
-		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.2" />
-		<PackageReference Include="Microsoft.Maui.Graphics" Version="9.0.40" />
-		<PackageReference Include="Microsoft.Windows.Compatibility" Version="9.0.2" />
+		<PackageReference Include="EPPlus" Version="8.0.2" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.4" />
+		<PackageReference Include="Microsoft.Maui.Graphics" Version="9.0.60" />
+		<PackageReference Include="Microsoft.Windows.Compatibility" Version="9.0.4" />
 		<PackageReference Include="NLog" Version="5.4.0" />
 		<PackageReference Include="NLog.Extensions.Logging" Version="5.4.0" />
 	</ItemGroup>
